--- a/index.html
+++ b/index.html
@@ -19,8 +19,23 @@
         </ul>
     </header>
     <main>
-        <div id="validate-nif">
-
+        <div id="validate-nif" class="column">            
+            <span style="font-size: 1.5rem; width: 30rem; text-align: center;">
+                Validate a NIF (Portuguese TIN) in a few seconds and completely free of charge.
+            </span>
+            <div class="row" style="gap: 1rem;">
+                <div id="portugal-flag" class="circle"></div>
+                <input type="text" maxlength="9" placeholder="Enter the NIF you want to validate">
+                <button>Validate</button>
+            </div>
+            <div id="validate-result" class="row">
+                <span id="validity"></span>
+                <div id="nif-type">
+                    <span>Type:</span>
+                    <span></span>
+                </div>
+                <span id="error-message"></span>
+            </div>
         </div>
     </main>
 </body>
