--- a/index.html
+++ b/index.html
@@ -6,38 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./Images/bandeira.png">
     <link rel="stylesheet" href="./Styles/global.css">
-    <script src="./Scripts/main.js"></script>
+    <script src="./Scripts/Angular/angular.min.js"></script>
+    <script src="./Scripts/Angular/app.js"></script>
+    <script src="./Scripts/Angular/angular-validate.js"></script>
+    <!-- <script src="./Scripts/main.js"></script> -->
     <title>NIF Validator | Portugal </title>
 </head>
-<body>
-    <header class="row">
-        <span style="font-size: 1.3rem;">NIF Validator</span>
-        <ul class="row">
-            <li><a href="#validate-nif">Validate NIF</a></li>
-            <li><a href="#api">API For Developers</a></li>
-            <li><a href="#about">About the Creator</a></li>            
-        </ul>
-    </header>
-    <main>
-        <div id="validate-nif" class="column">            
-            <span style="font-size: 1.5rem; width: 30rem; text-align: center;">
-                Validate a NIF (Portuguese TIN) in a few seconds and completely free of charge.
-            </span>
-            <div class="row" style="gap: 1rem;">
-                <div id="portugal-flag" class="circle"></div>
-                <input type="text" maxlength="9" placeholder="Enter the NIF you want to validate" id="nif-value">
-                <button onclick="validate()">Validate</button>
-            </div>
-            <span id="request-error">There was an error trying to perform the validation, please contact our team, here.</span>
-            <div id="validate-result" class="row">
-                <span id="validity"></span>
-                <div id="nif-type">
-                    <span>Type: </span>
-                    <span id="type-result"></span>
+<body ng-app="app" ng-cloak>
+    <div ng-controller="ValidateController as ctrlValidate">      
+        <header class="row">
+            <span style="font-size: 1.3rem;">NIF Validator</span>
+            <ul class="row">
+                <li><a href="#validate-nif">Validate NIF</a></li>
+                <li><a href="#api">API For Developers</a></li>
+                <li><a href="#about">About the Creator</a></li>   
+            </ul>
+        </header>
+        <main>
+            <div id="validate-nif" class="column">            
+                <span style="font-size: 1.5rem; width: 30rem; text-align: center;">
+                    Validate a NIF (Portuguese TIN) in a few seconds and completely free of charge.
+                </span> 
+                <div class="row" style="gap: 1rem;">
+                    <div id="portugal-flag" class="circle"></div>
+                    <input type="text" maxlength="9" ng-model="NifValue" ng-class="{'input-mandatory': NifValue == '' || NifFieldIsBlank}" placeholder="Enter the NIF you want to validate" ng-change="ValidateFieldMandatory()">
+                    <button ng-click="Validate()">Validate</button>
                 </div>
-                <span id="error-message"></span>
+                <span ng-if="NifFieldIsBlank">Fill in the required field</span>
+                <span ng-if="ShowErrorRequest">There was an error trying to perform the validation, please contact our team, here.</span>
+                <div id="validate-result" class="row" ng-if="HasProcessed">                 
+                    <span id="validity" ng-class="{'card-green': ResponseApi.isValid , 'card-red': !ResponseApi.isValid} ">{{ResponseApi.isValid ? 'VALID NIF!' : 'INVALID NIF!'}}</span>
+                    <div>
+                        <span>NIF: </span>
+                        <span>{{SearchNif}}</span>
+                    </div>
+                    <div id="nif-type" class="row" ng-if="ResponseApi.isValid">
+                        <span>Type: </span>
+                        <span id="type-result">{{ResponseApi.type}}</span>
+                    </div>
+                    <span id="error-message">{{ResponseApi.errorMessage}}</span>
+                </div>
             </div>
-        </div>
-    </main>
+        </main>
+    </div>
+
 </body>
 </html>
