--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             </ul> -->
         </header>
         <main>
-            <div id="validate-nif" class="column">            
-                <span style="font-size: 1.5rem; width: 30rem; text-align: center;">
+            <div id="validate-nif" class="column section">            
+                <span style="font-size: 1.5rem; text-align: center;">
                     Validate a NIF (Portuguese TIN) in a few seconds and completely free of charge.
                 </span> 
-                <div class="row" style="gap: 1rem;">
+                <div class="row center" style="gap: 1rem;">
                     <img src="./Images/bandeira.png" alt="portugal-flag" id="portugal-flag" class="circle">
                     <input type="text" maxlength="9" ng-model="NifValue" ng-class="{'input-mandatory': NifValue == '' || NifFieldIsBlank}" placeholder="Enter the NIF you want to validate" ng-change="ValidateFieldMandatory()">
                     <button ng-click="Validate()">Validate</button>
@@ -47,8 +47,9 @@
                     <span id="error-message">{{ResponseApi.errorMessage}}</span>
                 </div>
             </div>
-            <div id="api" class="column section">
+            <div id="api" class="column section center">
                 <span class="title">API For Developers</span>
+                <span style="text-align: center;">If you are a software developer and want to integrate NIF Validator with your application. Access the official documentation here.</span>
             </div>
         </main>
     </div>
