--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body ng-app="app" ng-cloak>
     <div ng-controller="ValidateController as ctrlValidate">      
         <header class="row">
-            <span style="font-size: 1.3rem;">NIF Validator</span>
+            <span style="font-size: 1.8rem;">NIF Validator</span>
+            <img src="./Images/check.png" alt="check" style="width: 2rem;">
             <!-- <ul class="row">
                 <li><a href="#validate-nif">Validate NIF</a></li>
                 <li><a href="#api">API For Developers</a></li>
