fix slogan about the creator

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             <div id="about" class="column section center">
                 <span class="title">About the Creator</span>
-                <span style="text-align: center;">I'm Luiz Camargo, a Brazilian Full Stack Developer passionate for solving problems and create new things. </span>
+                <span style="text-align: center;">I'm Luiz Camargo, a Brazilian A Full Stack Developer passionate about creating things that impact lives through technology. </span>
                 <span style="text-align: center;">it's a pleasure to have you here!</span>
             </div>
         </main>
