--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
                 </span> 
                 <div class="row center" style="gap: 1rem;">
                     <img src="./Images/bandeira.png" alt="portugal-flag" id="portugal-flag" class="circle">
-                    <input type="text" maxlength="9" ng-model="NifValue" ng-class="{'input-mandatory': NifValue == '' || NifFieldIsBlank}" placeholder="Enter the NIF you want to validate" ng-change="ValidateFieldMandatory()">
-                    <button ng-click="Validate()">Validate</button>
+                    <input type="text" maxlength="9" ng-model="NifValue" ng-class="{'input-mandatory': !NifValue}" placeholder="Enter the NIF you want to validate">
+                    <button ng-click="ValidateNif()">{{ IsProcessing ? 'Loading...' : 'Validate' }}</button>
                 </div>
-                <span ng-if="NifFieldIsBlank">Fill in the required field</span>
                 <span ng-if="ShowErrorRequest">There was an error trying to perform the validation, please contact our team, here.</span>
-                <div id="validate-result" class="row" ng-if="HasProcessed">                 
+                <div id="validate-result" class="row" ng-if="ResponseApi">                 
                     <span id="validity" ng-class="{'card-green': ResponseApi.isValid , 'card-red': !ResponseApi.isValid} ">{{ResponseApi.isValid ? 'VALID NIF!' : 'INVALID NIF!'}}</span>
                     <div>
                         <span>NIF: </span>
@@ -65,7 +64,7 @@
             </div>
         </main>
         <footer class="row center">
-            <span>© Copyright {{Year}} | Created by Luiz Camargo </span>
+            <span>© Copyright {{CurrentYear}} | Created by Luiz Camargo </span>
         </fo>
     </div>
 
