--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <span style="font-size: 2rem; text-align: center;">
                     Validate a NIF (Portuguese TIN) in a few seconds and completely free of charge.
                 </span> 
-                <div class="row center" style="gap: 1rem;">
+                <form class="row center" style="gap: 1rem;">
                     <img src="./Images/bandeira.png" alt="portugal-flag" id="portugal-flag" class="circle">
-                    <input type="text" maxlength="9" ng-model="NifValue" ng-class="{'input-mandatory': !NifValue}" placeholder="Enter the NIF you want to validate">
+                    <input type="text" required maxlength="9" ng-model="NifValue" ng-class="{'input-mandatory': !NifValue}" placeholder="Enter the NIF you want to validate">
                     <button ng-click="ValidateNif()">{{ IsProcessing ? 'Loading...' : 'Validate' }}</button>
-                </div>
+                </form>
                 <span ng-if="ShowErrorRequest">There was an error trying to perform the validation, please contact our team, here.</span>
                 <div id="validate-result" class="row" ng-if="ResponseApi">                 
                     <span id="validity" ng-class="{'card-green': ResponseApi.isValid , 'card-red': !ResponseApi.isValid} ">{{ResponseApi.isValid ? 'VALID NIF!' : 'INVALID NIF!'}}</span>
