--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div id="about" class="column section center">
                 <span class="title">About the Creator</span>
-                <span style="text-align: center;">I'm Luiz Camargo, a Brazilian A Full Stack Developer passionate about creating things that impact lives through technology. </span>
+                <span style="text-align: center;">I'm  <a href="https://luizcamargo.dev/" target="_blank" id="my-name">Luiz Camargo</a>, a Brazilian A Full Stack Developer passionate about creating things that impact lives through technology. </span>
                 <span style="text-align: center;">it's a pleasure to have you here!</span>
             </div>
         </main>
