changed path scripts

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./Images/bandeira.png">
     <link rel="stylesheet" href="./Styles/global.css">
-    <script src="./Scripts/Angular/angular.min.js"></script>
-    <script src="./Scripts/Angular/app.js"></script>
-    <script src="./Scripts/Angular/angular-validate.js"></script>
+    <script src="./Scripts/angular.min.js"></script>
+    <script src="./Scripts/app.js"></script>
+    <script src="./Scripts/angular-validate.js"></script>
     <title>NIF Validator | Portugal </title>
 </head>
 <body ng-app="app" ng-cloak>
